[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/game/world/entity/MovingEntity.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/game/world/entity/components/hit_box/HitBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/game/world/entity/entities/hazard/Explosion.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/hazard/explosion.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 13.0
} ]

[node name="Explosion" instance=ExtResource( 1 )]
script = ExtResource( 3 )
is_gravity_enabled = false
is_internal_collision_func_enabled = false

[node name="OutHitBox" parent="." index="1" instance=ExtResource( 2 )]
__team = "player_team"

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutHitBox" index="0"]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="2"]
frames = SubResource( 7 )
frame = 4

[node name="PlayerFlingArea" type="Area2D" parent="." index="3"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerFlingArea" index="0"]
position = Vector2( -1, 0 )
shape = SubResource( 1 )

[connection signal="hit_dealt" from="OutHitBox" to="." method="_on_OutHitBox_hit_dealt"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="PlayerFlingArea" to="." method="_on_PlayerFlingArea_body_entered"]
